--- a/LineProfile/CMakeLists.txt
+++ b/LineProfile/CMakeLists.txt
@@ -14,7 +14,7 @@ set(MODULE_PYTHON_RESOURCES
 slicerMacroBuildScriptedModule(
   NAME ${MODULE_NAME}
   SCRIPTS ${MODULE_PYTHON_SCRIPTS}
-  #RESOURCES ${MODULE_PYTHON_RESOURCES}
+  RESOURCES ${MODULE_PYTHON_RESOURCES}
   WITH_GENERIC_TESTS
   )
 
@@ -26,5 +26,5 @@ if(BUILD_TESTING)
   slicer_add_python_unittest(SCRIPT ${MODULE_NAME}.py)
 
   # Additional build-time testing
-  #add_subdirectory(Testing)
+  add_subdirectory(Testing)
 endif()
