Updated LineProfile for Slicer-4.11 (uses new markups line)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ include(${Slicer_USE_FILE})
 add_subdirectory(LineProfile)
 add_subdirectory(Lights)
 add_subdirectory(UserStatistics)
+add_subdirectory(CurvedPlanarReformat)
 
 #-----------------------------------------------------------------------------
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
