Add initial AutoSave module
Add module for automatically saving Slicer scenes into the specified directory.
User can enable/disable the module, and specify the interval between autosaves in H/M/S.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(LineProfile)
 add_subdirectory(Lights)
 add_subdirectory(UserStatistics)
 add_subdirectory(CurvedPlanarReformat)
+add_subdirectory(AutoSave)
 
 #-----------------------------------------------------------------------------
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
