Add VolumeRenderingSpecialEffects module
Module offers sphere and wedge cropping and can be extended with additional volume rendering special effects in the future.

Limitations: for real-time updates, the module GUI has to be opened and it only provided for the currently selected parameter node.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_subdirectory(UserStatistics)
 add_subdirectory(CurvedPlanarReformat)
 add_subdirectory(AutoSave)
 add_subdirectory(ImportOsirixROI)
+add_subdirectory(VolumeRenderingSpecialEffects)
 
 #-----------------------------------------------------------------------------
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
