Add Segment Cross-Section Area
Based on module developed by Hollister Herhold and Andras Lasso:
https://gist.github.com/lassoan/62370c6b0552f7df1111eb7fc37abfd2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(CurvedPlanarReformat)
 add_subdirectory(AutoSave)
 add_subdirectory(ImportOsirixROI)
 add_subdirectory(VolumeRenderingSpecialEffects)
+add_subdirectory(SegmentCrossSectionArea)
 
 #-----------------------------------------------------------------------------
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
