Added DocumentationTools module
It can do preliminary conversion of module documentation from mediawiki to markdown - to be used in Slicer user manual.

It can also generate html documentation (install all required python packages and runs sphinx with appropriate input arguments).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory(AutoSave)
 add_subdirectory(ImportOsirixROI)
 add_subdirectory(VolumeRenderingSpecialEffects)
 add_subdirectory(SegmentCrossSectionArea)
+add_subdirectory(DocumentationTools)
 
 #-----------------------------------------------------------------------------
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
