Add experimental SceneRecorder module
This module observes all MRML node changes in the scene and records them into a list.
The module could be enhanced with the ability to replay these events.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ add_subdirectory(DocumentationTools)
 add_subdirectory(StyleTester)
 add_subdirectory(CombineModels)
 add_subdirectory(SliceOmaticImporter)
+add_subdirectory(SceneRecorder)
 
 #-----------------------------------------------------------------------------
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
