BUG: Fix packaging
Folder names were updated but top-level CMakeLists.txt was not.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,19 +19,20 @@ include(${Slicer_USE_FILE})
 
 #-----------------------------------------------------------------------------
 # Extension modules
-add_subdirectory(LineProfile)
-add_subdirectory(Lights)
-add_subdirectory(UserStatistics)
-add_subdirectory(CurvedPlanarReformat)
 add_subdirectory(AutoSave)
-add_subdirectory(ImportOsirixROI)
-add_subdirectory(VolumeRenderingSpecialEffects)
-add_subdirectory(SegmentCrossSectionArea)
-add_subdirectory(DocumentationTools)
-add_subdirectory(StyleTester)
 add_subdirectory(CombineModels)
-add_subdirectory(SliceOmaticImporter)
+add_subdirectory(CurvedPlanarReformat)
+add_subdirectory(DocumentationTools)
+add_subdirectory(ImportOCT)
+add_subdirectory(ImportOsirixROI)
+add_subdirectory(ImportSliceOmatic)
+add_subdirectory(Lights)
+add_subdirectory(LineProfile)
 add_subdirectory(SceneRecorder)
+add_subdirectory(SegmentCrossSectionArea)
+add_subdirectory(StyleTester)
+add_subdirectory(UserStatistics)
+add_subdirectory(VolumeRenderingSpecialEffects)
 
 #-----------------------------------------------------------------------------
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
