Add RemoveCtTable module
Created from this gist: https://gist.github.com/lassoan/84d1f9a093dbb6a46c0fcc89279d8088

Improved with additional optional padding and customization of fill value and accuracy.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_subdirectory(SegmentCrossSectionArea)
 add_subdirectory(StyleTester)
 add_subdirectory(UserStatistics)
 add_subdirectory(VolumeRenderingSpecialEffects)
+add_subdirectory(RemoveCtTable)
 
 #-----------------------------------------------------------------------------
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
