--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ include(${Slicer_USE_FILE})
 #-----------------------------------------------------------------------------
 # Extension modules
 add_subdirectory(AutoSave)
+add_subdirectory(CharacterizeTransformMatrix)
 add_subdirectory(CombineModels)
 add_subdirectory(CurvedPlanarReformat)
 add_subdirectory(DocumentationTools)
@@ -30,6 +31,7 @@ add_subdirectory(Lights)
 add_subdirectory(LineProfile)
 add_subdirectory(SceneRecorder)
 add_subdirectory(SegmentCrossSectionArea)
+add_subdirectory(StitchVolumes)
 add_subdirectory(StyleTester)
 add_subdirectory(UserStatistics)
 add_subdirectory(VolumeRenderingSpecialEffects)
