Add ImportItkSnapLabel module for importing ITK-Snap label description files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ add_subdirectory(CharacterizeTransformMatrix)
 add_subdirectory(CombineModels)
 add_subdirectory(CurvedPlanarReformat)
 add_subdirectory(DocumentationTools)
+add_subdirectory(ImportItkSnapLabel)
 add_subdirectory(ImportOCT)
 add_subdirectory(ImportOsirixROI)
 add_subdirectory(ImportSliceOmatic)
