--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,10 @@ add_subdirectory(CharacterizeTransformMatrix)
 add_subdirectory(CombineModels)
 add_subdirectory(CurvedPlanarReformat)
 add_subdirectory(DocumentationTools)
-add_subdirectory(ImportItkSnapLabel)
+if (Slicer_VERSION VERSION_LESS 5.1)
+  # Latest Slicer 5.1 and above has ITK-Snap Label Description File importer built in
+  add_subdirectory(ImportItkSnapLabel)
+endif()
 add_subdirectory(ImportOCT)
 add_subdirectory(ImportOsirixROI)
 add_subdirectory(ImportSliceOmatic)
