Add importer for OpenInventor .iv mesh file
A very simple VRML 1.0 mesh reader file. It assumes a single triangle mesh in the file.

It can read mesh files requested at the Slicer forum - https://discourse.slicer.org/t/displaying-iv-bone-files-onto-slicer/26942

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ if (Slicer_VERSION VERSION_LESS 5.1)
   add_subdirectory(ImportItkSnapLabel)
 endif()
 add_subdirectory(ImportOCT)
+add_subdirectory(ImportOpenInventor)
 add_subdirectory(ImportOsirixROI)
 add_subdirectory(ImportSliceOmatic)
 add_subdirectory(Lights)
