Add LoadRemoteFile module
Allows opening files in Slicer directly from the web browser.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_subdirectory(ImportOsirixROI)
 add_subdirectory(ImportSliceOmatic)
 add_subdirectory(Lights)
 add_subdirectory(LineProfile)
+add_subdirectory(LoadRemoteFile)
 add_subdirectory(SceneRecorder)
 add_subdirectory(SegmentCrossSectionArea)
 add_subdirectory(StitchVolumes)
