ENH: Add NumPyDataLoader for reading .npy and .npz files
The `.npy` or `npz` file may contain an array of dimension
between 1 to 5 (axes: time, K, J, I, component).

The `NumPyDataLoader` reader was created to follow-up on Slicer forum
discussions.
See https://discourse.slicer.org/t/import-numpy-file-in-as-image-volume/3653/5

Notes:
* User is responsible for setting the correct IJK to RAS matrix.
* For the 4D and 5D cases, having the channel-last convention corresponds to the
  ITK/VTK memory layout and is different from the convention used in `PyTorch`
  for [NCHW for 4D][NCHW] tensors/arrays and [NCDHW for 5D][NCDHW].

[NCHW]: https://pytorch.org/docs/stable/generated/torch.nn.Conv2d.html#torch.nn.Conv2d
[NCDHW]: https://pytorch.org/docs/stable/generated/torch.nn.Conv3d.html#torch.nn.Conv3d

Based on:
* https://github.com/pieper/SlicerDMRI/blob/9565f89d16cd72618cd87f1c9046542450e4937b/Modules/Scripted/NIfTIFile/NIfTIFile.py
* https://github.com/Slicer/Slicer/blob/9390be6bf76e048e6fd384d8bfd607eba2857b5a/Applications/SlicerApp/Testing/Python/SlicerScriptedFileReaderWriterTest.py

Co-authored-by: Andras Lasso <lasso@queensu.ca>
Co-authored-by: Jean-Christophe Fillion-Robin <jchris.fillionr@kitware.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ if (Slicer_VERSION VERSION_LESS 5.1)
   # Latest Slicer 5.1 and above has ITK-Snap Label Description File importer built in
   add_subdirectory(ImportItkSnapLabel)
 endif()
+add_subdirectory(ImportNumPyArray)
 add_subdirectory(ImportOCT)
 add_subdirectory(ImportOpenInventor)
 add_subdirectory(ImportOsirixROI)
