--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,8 @@ add_subdirectory(StyleTester)
 add_subdirectory(UserStatistics)
 add_subdirectory(VolumeRenderingSpecialEffects)
 add_subdirectory(RemoveCtTable)
+add_subdirectory(CardiacAgatstonScoring)
+add_subdirectory(ColorizeVolume)
 
 #-----------------------------------------------------------------------------
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
