ENH: DICOM To NRRD Module Implementation
Added the DICOMtoNRRD directory to CMakeLists and updated the README
with the new sandbox module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(AutoSave)
 add_subdirectory(CharacterizeTransformMatrix)
 add_subdirectory(CombineModels)
 add_subdirectory(CurvedPlanarReformat)
+add_subdirectory(DICOMToNRRD)
 add_subdirectory(DocumentationTools)
 if (Slicer_VERSION VERSION_LESS 5.1)
   # Latest Slicer 5.1 and above has ITK-Snap Label Description File importer built in
