ENH: update vtkbool version to latest
https://github.com/zippy84/vtkbool/tree/24d9c39bf9d446faf96e21db9891bc3e89e3d881

--- a/CombineModels/Logic/CMakeLists.txt
+++ b/CombineModels/Logic/CMakeLists.txt
@@ -9,16 +9,21 @@ set(${KIT}_INCLUDE_DIRECTORIES
   )
 
 set(${KIT}_SRCS
+# private details
+  Utilities.cxx
+  Optimize.cxx
+  Contact.cxx
+  Merger.cxx
+# public
   vtkPolyDataBooleanFilter.cxx
   vtkPolyDataBooleanFilter.h
-  vtkPolyDataContactFilter.cxx
-  vtkPolyDataContactFilter.h
-  # private details
-  Utilities.cxx
   )
 
 set_source_files_properties(
   Utilities.cxx
+  Optimize.cxx
+  Contact.cxx
+  Merger.cxx
   WRAP_EXCLUDE
   )
 
