ENH: Remove Line Profile module to Slicer core Latest Slicer 5.9 and above has Line Profile module built in

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,10 @@ add_subdirectory(ImportOpenInventor)
 add_subdirectory(ImportOsirixROI)
 add_subdirectory(ImportSliceOmatic)
 add_subdirectory(Lights)
-add_subdirectory(LineProfile)
+if (Slicer_VERSION VERSION_LESS 5.9)
+  # Latest Slicer 5.9 and above has Line Profile module built in
+  add_subdirectory(LineProfile)
+endif()
 add_subdirectory(LoadRemoteFile)
 add_subdirectory(SceneRecorder)
 add_subdirectory(SegmentCrossSectionArea)
